--- a/FrontEnd/upload.html
+++ b/FrontEnd/upload.html
@@ -39,11 +39,9 @@
           </div>
           <div class="col-sm-4 offset-md-1 py-4">
             <ul class="list-unstyled">
-              <li><h4 class="text-white"><a href="Gallery.html" class="text-white">Images</a></li></h4>
-              <li><h4 class="text-white"><a href="login.html" class="text-white">Login</a></li></h4>
-              <li><h4 class="text-white"><a href="SignUp.html" class="text-white">Sign Up</a></li></h4>
-              <li><h4 class="text-white"><a href="upload.html" class="text-white">Upload Details</a></li></h4>
-              <li><h4 class="text-white"><a href="Search.html" class="text-white">Search</a></li></h4>
+                <li><h4 class="text-white"><a href="Gallery.html" class="text-white">Images</a></li></h4>
+                <li><h4 class="text-white"><a href="upload.html" class="text-white">Upload Details</a></li></h4>
+                <li><h4 class="text-white"><a href="Search.html" class="text-white">Search</a></li></h4>
             </ul>
           </div>
         </div>
@@ -67,7 +65,7 @@
         <div class="row pt-1 pb-1">
             <div class="col-lg-12">
                 <h4 class="text-center text-white">Upload Details</h4>
-                <h6 class="lead text-center text-white">Upload images with details to the reference Database. <br>Please seperate each typable input with a "_" such as "light blue" becomming "light_blue". <br>Please fill in all fields.</h6>
+                <h6 class="lead text-center text-white">Upload images with details to the reference Database. <br>Please seperate each typable input with a "_" such as "light blue" becomming "light_blue". <br>Please fill in all fields either using the dropdown for existing entries or typing them for new ones</h6>
             </div>
         </div>
     </div>
@@ -91,7 +89,7 @@
             </div>
             <br>
     <div class="container">
-        <h6 class="text-white lead">Artwork Details</h6>
+        <h5 class="text-white lead">Artwork Details</h5>
         <form action="#" method="post" novalidate="novalidate">
             <div class="row">
                 <div class="col-lg-12">
@@ -172,7 +170,22 @@
                 </div>
             </div>
             <br>
+            
             <h6 class="text-white lead">Artist Details</h6>
+            <h6 class="text-white">Pseudonym is Mandatory</h6>
+            <form action="#" method="post" novalidate="novalidate">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <div class="row">
+                                <div class="col-lg-12 col-md-3 col-sm-12 p-0">
+                                        <select class="form-control search-slt" id="artstyle">
+                                            <option>Artist List</option>
+                                        </select>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
             <form action="#" method="post" novalidate="novalidate">
                 <div class="row">
                     <div class="col-lg-12">
@@ -194,6 +207,20 @@
                 </div>
                 <br>
                 <h6 class="text-white lead">Character Details</h6>
+                <h6 class="text-white">If the character is original put in 'franchise' "Original". If there is no character then please select "NO CHARACTER" in the character list</h6>
+                <form action="#" method="post" novalidate="novalidate">
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="row">
+                                    <div class="col-lg-12 col-md-3 col-sm-12 p-0">
+                                            <select class="form-control search-slt" id="artstyle">
+                                                <option>Character List</option>
+                                            </select>
+                                    </div>
+                            </div>
+                        </div>
+                    </div>
+                    <br>
         <form action="#" method="post" novalidate="novalidate">
             <div class="row">
                 <div class="col-lg-12">
