--- a/FrontEnd/Search.html
+++ b/FrontEnd/Search.html
@@ -122,6 +122,7 @@
                                         <option value ="Extreme_Close">Extreme Close Up</option>
                                         <option value ="From_Front">From Front</option>
                                         <option value="From_Side">From Side</option>
+                                        <option value="From_Back">From Back</option>
                                         <option value="High_Angle">High Angle</option>
                                         <option value="Low_Angle">Low Angle</option>
                                         <option value="POV">POV</option>
