--- a/FrontEnd/upload.html
+++ b/FrontEnd/upload.html
@@ -136,55 +136,53 @@
                                     <select class="form-control search-slt" id="artstylechoice">
                                         <option>Art Style</option>
                                         <option>Abstract</option>
-                                        <option>Anime/Manga</option>
+                                        <option value="Manga">Anime/Manga</option>
                                         <option>Cartoon</option>
                                         <option>Gestual</option>
-                                        <option>Line Art</option>
+                                        <option value="Line_Art">Line Art</option>
                                         <option>Misc</option>
                                         <option>Pixel Art</option>
                                         <option>Realistic</option>
-                                        <option>Semi-Realistic</option>
+                                        <option value="Semi_Realistic">Semi-Realistic</option>
                                         <option>Sketch</option>
                                     </select>
                             </div>
                             <div class="col-lg-ad col-md-3 col-sm-12 p-0">
                                     <select class="form-control search-slt" id="anglechoice">
                                         <option>Angle</option>
-                                        <option>3/4 Angle</option>
-                                        <option>Birds Eye</option>
-                                        <option>Dutch Angle</option>
-                                        <option>Extreme Close Up</option>
+                                        <option value="Birds_Eye">Birds Eye</option>
+                                        <option value="Dutch_Angle">Dutch Angle</option>
                                         <option>Forshortening</option>
-                                        <option>From Behind</option>
-                                        <option>From Front</option>
-                                        <option>From Side</option>
-                                        <option>High Angle</option>
-                                        <option>Low Angle</option>
-                                        <option>POV</option>
+                                        <option value="High_Angle">High Angle</option>
+                                        <option value="Low_Angle">Low Angle</option>
+                                        <option value="Extreme_Low">Extreme Low Angle</option>
+                                        <option value="Level">Level Angle</option>
                                     </select>
                             </div>
                             <div class="col-lg-ad col-md-3 col-sm-12 p-0">
                                     <select class="form-control search-slt" id="camerachoice">
-                                        <option>Camera Position</option>
-                                        <option>Extreme Close Up</option>
-                                        <option>Portrait</option>
-                                        <option>Dutch Angle</option>
-                                        <option>Extreme Close Up</option>
-                                        <option>From Behind</option>
-                                        <option>From Front</option>
-                                        <option>From Side</option>
-                                        <option>High Angle</option>
-                                        <option>Low Angle</option>
-                                        <option>POV</option>
+                                      <option value="3/4View">3/4 Front View</option>
+                                      <option value="3/4View_Back">3/4 Back View</option>
+                                      <option value="Portrait">Portrait</option>
+                                      <option value ="Extreme_Close">Extreme Close Up</option>
+                                      <option value ="From_Front">From Front</option>
+                                      <option value="From_Side">From Side</option>
+                                      <option value="From_Back">From Back</option>
+                                      <option value="High_Angle">High Angle</option>
+                                      <option value="Low_Angle">Low Angle</option>
+                                      <option value="POV">POV</option>
+                                      <option value="Cowboy_Shot">Cowboy Shot</option>
+                                      <option value="Long_Shot">Long Shot</option>
+                                      <option value="Full_Body">Full Body</option>
                                     </select>
                             </div>
                         <div class="col-lg-ad col-md-3 col-sm-12 p-0">
                             <select class="form-control search-slt" id="colourstylechoice">
                                 <option>Colour Style</option>
-                                <option>Cel Shading</option>
-                                <option>Cross Hatching</option>
-                                <option>Monochrome</option>
-                                <option>Soft Shading</option>
+                                <option value="Cel_Shade">Cel Shading</option>
+                                <option value="Cross_Hatch">Cross Hatching</option>
+                                <option value="Monochrome">Monochrome</option>
+                                <option value="Soft_Shade">Soft Shading</option>
                             </select>
                         </div>
                         <div class="col-lg-ad col-md-3 col-sm-12 p-0">
@@ -196,11 +194,11 @@
                             <div class="col-lg-ad col-md-3 col-sm-12 p-0">
                                 <select class="form-control search-slt" id="mediumchoice">
                                     <option>Medium</option>
-                                    <option>Crayon</option>
-                                    <option>Digital</option>
-                                    <option>Markers</option>
-                                    <option>Paint</option>
-                                    <option>Pencil</option>
+                                    <option value="Crayon">Crayon</option>
+                                    <option value="Digital">Digital</option>
+                                    <option value="Markers">Markers</option>
+                                    <option value="Paint">Paint</option>
+                                    <option value="Pencil">Pencil</option>
                                 </select>
                         </div>
                     
